--- a/main.html
+++ b/main.html
@@ -10,6 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Bali, Indonesia</h1>
+	<br>
+	<p>Bali appeals through its sheer natural beauty of looming volcanoes and lush terraced rice fields that exude peace and serenity. It is also famous for surfers' paradise!</p>
+
+	<h2>Attractions:</h2>
+	<ol>
+		<li><strong><i>jaipur</i></strong></li>
+		<li><strong><i>Udaipur</i></strong></li>
+		<li><strong><i>Dharamshala</i></strong></li>
+		<li><strong><i>Shimla</i></strong></li>
+		<li><strong><i>Solang</i></strong></li>
+	</ol>
+
+	<h2>Foof Items:</h2>
+	<ul>
+		<li><b>Dosa</b></li>
+		<li><b>Burgen</b></li>
+		<li><b>pizza</b></li>
+        <li><b>churma</b></li>
+		<li><b>samosa</b></li>
+	</ul>
 
 </body>
 
